<resources>
    <string name="map_key" translatable="false">AIzaSyAZ8nu6dxZYqO32Hioss3Rc45Mcr3FTDRg</string>
    <string name="app_name">Android Blood Bank</string>
    <string name="quote">Don’t let mosquitoes get your blood first</string>
    <string name="login">LOGIN</string>
    <string name="forgotten_password">Forgotten Password?</string>
    <string name="dont_have_an_account">Don\'t Have an Account?</string>
    <string name="usignup"><u>SignUp</u></string>
    <string name="recover">Recover</string>
    <string name="forget">Forget</string>
    <string name="get_password">Get Password</string>
    <string name="signup">SIGNUP</string>
    <string name="back">Back</string>
    <string name="getpass">Get Password</string>
    <string name="available_donors"><u>Available Donors</u></string>
    <string name="tab_text_1">Search Donor</string>
    <string name="tab_text_2">Blood Bank</string>
    <string name="tab_text_3">My Profile</string>
    <string name="password">Password</string>
    <string name="division">Division</string>
    <string name="name">Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="district">District</string>
    <string name="area_village">Area/Village</string>
    <string name="blood_group">Blood Group</string>
    <string name="gender">Gender</string>
    <string name="mark_this_to_be_a_donor">Mark this to be a donor</string>
    <string name="last_donation_date">Last Donation Date</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="others">Others</string>
    <string name="a_b_b">A B B</string>
    <string name="set_security_question">Set Security Question</string>
    <string name="answer">Answer</string>
    <string name="set">Set</string>
    <string name="security_question_is_must_for_password_recovery">Security question is must for password recovery.</string>
    <string name="maybe_later">Maybe Later</string>
    <string name="password_recovery">Password Recovery</string>
    <string name="next">Next</string>
    <string name="set_password">Set Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="home">Home</string>
    <string name="message">Password Successfully Changed.\nGo back and login with your new password.</string>
    <string name="search_donor">Search\nDonor</string>
    <string name="blood_bank">Blood\nBank</string>
    <string name="blood_request">Blood\nRequest</string>
    <string name="my_profile">My\nProfile</string>
    <string name="about_us">About\nUs</string>
    <string name="logout">LogOut</string>
    <string name="recent_blood_requests">Recent Blood Requests</string>
    <string name="search_donor1">Search Donor</string>
    <string name="search">Search</string>
    <string name="select_division">Select Division:</string>
    <string name="select_blood_group">Select Blood Group:</string>
    <string name="search_again">Search Again</string>
    <string name="no_result_found">No result found!</string>
    <string name="results">Results:</string>
    <string name="blood_request1">Blood Request</string>
    <string name="request">Request</string>
    <string name="your_requests">Your Requests</string>
    <string name="you_have_no_pending_request">You have no pending request.</string>
    <string name="write_a_request_for_emergency_blood">Write a request for emergency blood:</string>
    <string name="about">About</string>
    <string name="version">Version</string>
    <string name="versionNo">1.0.1</string>
    <string name="designed_and_developed_by">Designed and Developed By</string>
    <string name="nurullah_al_masum">Masum and Rupok</string>
    <string name="blood_bank1">Blood Bank</string>
    <string name="my_profile1">My Profile</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="last_donation_date1">"Last Donation Date: "</string>
    <string name="edit">Edit</string>
    <string name="update_security_question">Update Security Question</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save">Save</string>
    <string name="change_password">Change Password</string>
    <string name="want_to_donate">Want to donate?</string>
    <string-array name="bloodgroups">
        <item>__Select One__</item>
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>O+</item>
        <item>O-</item>
        <item>AB+</item>
        <item>AB-</item>
    </string-array>
    <string-array name="division_list">
        <item>__Select One__</item>
        <item>Dhaka</item>
        <item>Rajshahi</item>
        <item>Barishal</item>
        <item>Khulna</item>
        <item>Sylhet</item>
        <item>Rangpur</item>
        <item>Chittagong</item>
        <item>Mymensingh</item>
    </string-array>
    <string-array name="Select_One">
        <item>__Select One__</item>
    </string-array>
    <string-array name="Chattogram">
        <item>__Select One__</item>
        <item>Bandarban</item>
        <item>Brahmanbaria</item>
        <item>Chandpur</item>
        <item>Chattogram</item>
        <item>Coxsbazar</item>
        <item>Cumilla</item>
        <item>Feni</item>
        <item>Khagrachhari</item>
        <item>Lakshmipur</item>
        <item>Noakhali</item>
        <item>Rangamati</item>
    </string-array>
    <string-array name="Rajshahi">
        <item>__Select One__</item>
        <item>Bogura</item>
        <item>Chapainawabganj</item>
        <item>Joypurhat</item>
        <item>Naogaon</item>
        <item>Natore</item>
        <item>Pabna</item>
        <item>Rajshahi</item>
        <item>Sirajganj</item>
    </string-array>
    <string-array name="Khulna">
        <item>__Select One__</item>
        <item>Bagerhat</item>
        <item>Chuadanga</item>
        <item>Jashore</item>
        <item>Jhenaidah</item>
        <item>Khulna</item>
        <item>Kushtia</item>
        <item>Magura</item>
        <item>Meherpur</item>
        <item>Narail</item>
        <item>Satkhira</item>
    </string-array>
    <string-array name="Barishal">
        <item>__Select One__</item>
        <item>Barguna</item>
        <item>Barishal</item>
        <item>Bhola</item>
        <item>Jhalakathi</item>
        <item>Patuakhali</item>
        <item>Pirojpur</item>
    </string-array>
    <string-array name="Sylhet">
        <item>__Select One__</item>
        <item>Habiganj</item>
        <item>Sunamganj</item>
        <item>Sylhet</item>
        <item>Moulvibazar</item>
    </string-array>
    <string-array name="Dhaka">
        <item>__Select One__</item>
        <item>Dhaka</item>
        <item>Faridpur</item>
        <item>Gazipur</item>
        <item>Gopalganj</item>
        <item>Kishoreganj</item>
        <item>Madaripur</item>
        <item>Manikganj</item>
        <item>Munshiganj</item>
        <item>Narayanganj</item>
        <item>Narsingdi</item>
        <item>Rajbari</item>
        <item>Shariatpur</item>
        <item>Tangail</item>
    </string-array>
    <string-array name="Rangpur">
        <item>__Select One__</item>
        <item>Dinajpur</item>
        <item>Gaibandha</item>
        <item>Kurigram</item>
        <item>Lalmonirhat</item>
        <item>Nilphamari</item>
        <item>Panchagarh</item>
        <item>Rangpur</item>
        <item>Thakurgaon</item>
    </string-array>
    <string-array name="Mymensingh">
        <item>__Select One__</item>
        <item>Jamalpur</item>
        <item>Netrokona</item>
        <item>Mymensingh</item>
        <item>Sherpur</item>
    </string-array>
    <string-array name="Security_Question">
        <item>__Select One__</item>
        <item>Your favourite food?</item>
        <item>Your favourite book?</item>
        <item>Your favourite game?</item>
    </string-array>
</resources>