<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_activity"
    android:orientation="vertical"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:paddingBottom="30dp"
    tools:context=".Activities.SearchDonor">

    <RelativeLayout
        android:id="@+id/rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:background="@drawable/ripple"
            android:clickable="true"
            android:focusable="true"
            android:padding="10dp"
            android:src="@drawable/ic_back"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:text="@string/search_donor1"
            android:textColor="#000"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="RelativeOverlap" />


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/back"
            android:background="#000" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/blood_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/select_blood_group"
            android:textColor="#000"
            android:textSize="17sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/blood_group_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/spinner"
            android:entries="@array/bloodgroups"
            android:gravity="left"
            android:paddingEnd="30dp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/division"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/select_division"
            android:textColor="#000"
            android:textSize="17sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/division_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/spinner"
            android:entries="@array/division_list"
            android:gravity="left"
            android:paddingEnd="30dp"
            tools:ignore="RtlHardcoded,RtlSymmetry" />

        <Button
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/ripple_button_login_signup"
            android:text="@string/search"
            android:textColor="#fff" />
    </LinearLayout>

    <TextView
        android:id="@+id/notFound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/no_result_found"
        android:textStyle="italic|bold"
        android:visibility="gone" />

    <TextView
        android:id="@+id/search_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/results"
        android:textColor="#000"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/rl1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <Button
            android:id="@+id/search_again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_gravity="right"
            android:background="@drawable/ripple_button_login_signup"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/search_again"
            android:textColor="#fff"
            android:visibility="visible"
            tools:ignore="RtlHardcoded" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:overScrollMode="never"
            android:scrollbarSize="0dp" />
    </RelativeLayout>


</LinearLayout>